# asynth

./: .gitignore  CMakeLists.txt  README.md
include/: constants.hpp
scripts/: sandbox.ipynb
src/: aplay.cpp  main.cpp  raysin.cpp  synth.cpp
